Changelog
=========

8.1.dev0 - (unreleased)
-----------------------

8.0 - (2015-04-02)
------------------
* Change: include the fields added by a schema extender in the readiness script
  [szabozo0 refs #24412]

7.9 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install 
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

7.8 - (2014-10-15)
------------------
* Change: removed condition for loading archive_dialog.js since it needs
  to load when the object is archived and instead set the authenticated flag
  to true
  [ichimdav]
* Bug fix: fixed archive/unarchive action to take into account the parent when
  context is a default page in folder.
  [ghicaale refs #21123]

7.7 - (2014-09-15)
------------------
* Change: finished archive unarchive content rules tests
  [ichimdav refs #20287]

7.6 - (2014-08-27)
------------------
* Feature: WIP created unit tests for the archive unarchive content rules
  [ghicaale refs #20287]

7.5 - (2014-08-12)
------------------
* Bug fix: fixed JS registry conditon for archive_dialog.js
  [ghicaale refs #20389]
* Feature: WIP created unit tests for the archive unarchive content rules
  [ghicaale refs #20287]

7.4 - (2014-06-24)
------------------
* Bug fix: fixed archive/unarchive content rules logic.
  [ghicaale refs #19953]
* Upgrade step: enable on production the "Archive previous version" and
  "Unarchive previous version" content rules.
  [ghicaale refs #19953]

7.3 - (2014-06-02)
------------------
* Bug fix: fixed "Archive/Unarchive" content rule action not to crash when there
  are no versions
  [ghicaale refs #19918]

7.2 - (2014-05-13)
------------------
* Bug fix: fixed various warning triggered on Zope startup
  [ghicaale refs #19289]
* Bug fix: decode the initiator, reason and message form fields in order to